# cebra_efficiency

./: .gitattributes  Cargo.toml  README.md  cebra_efficiency-16973e4f5506103.js  cebra_efficiency-16973e4f5506103_bg.wasm  cebra_efficiency-b0c6f3d6ddfe5446.js  cebra_efficiency-b0c6f3d6ddfe5446_bg.wasm  index.html  sw.js
.github/workflows/: rust.yml
assets/: sw.js
etc/: REU_2023.yaml
src/: app.rs  app_web.rs  channel_data.rs  detector.rs  exp_fitter.rs  gamma_line.rs  gamma_source.rs  lib.rs  main.rs  measurements.rs
src/efficiency_fitter/: detector.rs  exp_fitter.rs  gamma_source.rs  measurements.rs  mod.rs
src/egui_plot_stuff/: egui_line.rs  egui_points.rs  mod.rs  plot_settings.rs
